--- a/code/app/views/layouts/application.html.erb
+++ b/code/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 
       <h1>Senior Safeguard</h1>
 
+      <%= link_to 'Home', root_path %>
       <%= link_to 'Report a Scam', new_scam_path %>
 
 
