--- a/code/app/views/layouts/application.html.erb
+++ b/code/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 
       <%= link_to 'Home', root_path %>
       <%= link_to 'Report a Scam', new_scam_path %>
+      <%= link_to 'Friends', users_path %>
 
 
     <% else %>
