Adding CSS to improve the user interface

--- a/code/app/views/home/index.html.erb
+++ b/code/app/views/home/index.html.erb
@@ -1,12 +1,13 @@
 <h3>My Scam Reports</h3>
 
-<table>
+<table class="blueTable">
   <tr>
     <th>Date</th>
     <th>Time</th>
     <th>Type of Scam</th>
     <th>Description</th>
-    <th></th>
+    <th>View Comments</th>
+    <th>Delete</th>
   </tr>
  
   <% current_user.scams.each do |scam| %>
