--- a/code/app/views/layouts/application.html.erb
+++ b/code/app/views/layouts/application.html.erb
@@ -14,25 +14,31 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>    
 
-
-    <p class="navbar-text pull-right">
+    <p class="navbar-text pull-right" align="right">
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-
-      <h1>Senior Safeguard</h1>
-
-      <%= link_to 'Home', root_path %>
-      <%= link_to 'Report a Scam', new_scam_path %>
-      <%= link_to 'Friends', users_path %>
-
-
     <% else %>
       <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
       <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
     <% end %>
     </p>
+    <h1>Senior Safeguard</h1>
+    <% if user_signed_in? %>
+
+    <div id="divider-box"></div>
+
+      <ul class='menu'>
+
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Report a Scam', new_scam_path %></li>
+        <li><%= link_to 'Friends', users_path %></li>
+
+      </ul>
+
+    <div id="divider-box"></div>    
+    <% end %>
 
     <%= yield %>
   </body>
