--- a/code/app/views/users/index.html.erb
+++ b/code/app/views/users/index.html.erb
@@ -1,29 +1,42 @@
-<h3>Friends</h3>
-
+<h3 align="center">Friends</h3>
+<table class="blueTable">
+<tr><th></th><th></th></tr>
 <% current_user.friends.each do |user| %>
-	<%= user.email %>
-	<%= link_to "Delete", users_remove_friend_path(:friend_id => user), :method => :post %><br>
+	<td><%= user.email %></td>
+	<td><%= link_to "Delete", users_remove_friend_path(:friend_id => user), :method => :post %></td>
 <% end %>
+</table>
 
-<h3>Friend Requests</h3>
+<h3 align="center">Friend Requests</h3>
 
+<table class="blueTable">
+<tr><th></th><th></th></tr>
 <% current_user.requested_friends.each do |user| %>
-	<%= user.email %>
-	<%= link_to "Accept", users_accept_friend_path(:friend_id => user), :method => :post %><br>
+	<tr>
+	<td><%= user.email %></td>
+	<td><%= link_to "Accept", users_accept_friend_path(:friend_id => user), :method => :post %></td>
+	</tr>
 <% end %>
+</table>
 
-<h3>Pending Friends</h3>
+<h3 align="center">Pending Friends</h3>
 
+<table class="blueTable">
+<tr><th></th></tr>
 <% current_user.pending_friends.each do |user| %>
-	<%= user.email %>
+	<tr><td><%= user.email %></td></tr>
 <% end %>
+</table>
 
-<h3>Add a Friend</h3>
-
+<h3 align="center">Add a Friend</h3>
+<table class="blueTable">
+<tr><th></th><th></th></tr>
 <% @users.each do |user| %>
 	<% if user != current_user && !current_user.friends_with?(user) %>
-		<%= user.email %>
-		<%= link_to "Add Friend", users_add_friend_path(:friend_id => user), :method => :post %><br>
+	<tr>
+		<td><%= user.email %></td>
+		<td><%= link_to "Add Friend", users_add_friend_path(:friend_id => user), :method => :post %></td>
+	</tr>
 	<% end %>
-
 <% end %>
+</table>
