--- a/code/app/views/users/registrations/new.html.erb
+++ b/code/app/views/users/registrations/new.html.erb
@@ -3,25 +3,28 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="field" align="center">
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <br>
   </div>
 
-  <div class="field">
+  <div class="field" align="center">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
+    <br>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <div class="field" align="center">
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <br>
   </div>
 
-  <div class="actions">
+  <div class="actions" align="center">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
