--- a/code/app/views/comments/_comment.html.erb
+++ b/code/app/views/comments/_comment.html.erb
@@ -1,18 +1,18 @@
 <% if comment.commenter? %>
 <p>
-  <strong><%= comment.commenter %> comments:</strong>
+	<!-- Only allow the commenter to delete a comment -->
+	<% if current_user.email == comment.commenter %>
+  		<%= link_to 'Delete Comment', [comment.scam, comment],
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %>
+	<% end %>	
+	<%= comment.created_at.strftime("%m/%d/%y, %l:%M %P")%>
+	<strong><%= comment.commenter %> commented:</strong>
 </p>
- 
+
 <p>
   <%= comment.body %>
 </p>
 
-<!-- Only allow the commenter to delete a comment -->
-<% if current_user.email == comment.commenter %>
-<p>
-  <%= link_to 'Delete Comment', [comment.scam, comment],
-               method: :delete,
-               data: { confirm: 'Are you sure?' } %>
-</p>
-<% end %>
+
 <% end %>
