--- a/code/app/views/home/index.html.erb
+++ b/code/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <th>Date</th>
     <th>Time</th>
     <th>Type of Scam</th>
-    <th>Description</th>
+    <th>Number of Comments</th>
     <th>View Comments</th>
     <th>Delete</th>
   </tr>
@@ -15,7 +15,7 @@
       <td><%= scam.created_at.strftime("%m/%d/%y") %></td>
       <td><%= scam.created_at.strftime("%l:%M %P") %></td>
       <td><%= scam.scam_type %></td>
-      <td><%= scam.description %></td> 
+      <td><%= scam.comments.length %></td> 
       <td><%= link_to 'Show', scam_path(scam) %></td>
       <td><%= link_to 'Delete', scam_path(scam),
               method: :delete,
@@ -32,8 +32,8 @@
     <th>Time</th>
     <th>Type of Scam</th>
     <th>Submitted By</th>
-    <th>Description</th>
-    <th>View Comments</th>
+    <th>Number of Comments</th>
+    <th>Review this Scam</th>
   </tr>
  
   <% @friend_scams.each do |scam| %> <!-- @friend_scams is created in home_controller.rb -->
@@ -42,8 +42,8 @@
       <td><%= scam.created_at.strftime("%l:%M %P") %></td>
       <td><%= scam.scam_type %></td>
       <% @user = @users.find(scam.user_id) %> <!-- Get the user who submitted the scam -->
-      <td><%= @user.email %></td> <!-- Output that user's email -->      
-      <td><%= scam.description %></td> 
+      <td><%= @user.email %></td> <!-- Output that user's email -->   
+      <td><%= scam.comments.length %></td>   
       <td><%= link_to 'Show', scam_path(scam) %></td>       
     </tr>
   <% end %>
@@ -57,8 +57,8 @@
     <th>Time</th>
     <th>Type of Scam</th>
     <th>Submitted By</th>
-    <th>Description</th>
-    <th>View Comments</th>
+    <th>Number of Comments</th>
+    <th>Review this Scam</th>
   </tr>
  
   <% @sorted_scams.each do |scam| %> <!-- @sorted_scams is created in home_controller.rb -->
@@ -68,7 +68,7 @@
       <td><%= scam.scam_type %></td>
       <% @user = @users.find(scam.user_id) %> <!-- Get the user who submitted the scam -->
       <td><%= @user.email %></td> <!-- Output that user's email -->      
-      <td><%= scam.description %></td> 
+      <td><%= scam.comments.length %></td> 
       <td><%= link_to 'Show', scam_path(scam) %></td>       
     </tr>
   <% end %>
