--- a/code/app/views/layouts/application.html.erb
+++ b/code/app/views/layouts/application.html.erb
@@ -29,13 +29,9 @@
 
     <div id="divider-box"></div>
 
-      <ul class='menu'>
-
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'Report a Scam', new_scam_path %></li>
-        <li><%= link_to 'Friends', users_path %></li>
-
-      </ul>
+        <li class="menu"><%= link_to 'Home', root_path %></li>
+        <li class="menu"><%= link_to 'Report a Scam', new_scam_path %></li>
+        <li class="menu"><%= link_to 'Friends', users_path %></li>
 
     <div id="divider-box"></div>    
     <% end %>
