Added about page and educational page. Added the ability to edit a scam report.

--- a/code/app/views/layouts/application.html.erb
+++ b/code/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
         <li class="menu"><%= link_to 'Home', root_path %></li>
         <li class="menu"><%= link_to 'Report a Scam', new_scam_path %></li>
         <li class="menu"><%= link_to 'Friends', users_path %></li>
+        <li class="menu"><%= link_to 'Help & About', about_path %></li>
+        <li class="menu"><%= link_to 'How to Identify Online Scams', learn_path %></li>
 
     <div id="divider-box"></div>    
     <% end %>
