--- a/code/app/views/pages/about.html.erb
+++ b/code/app/views/pages/about.html.erb
@@ -1,4 +1,23 @@
-<%= link_to 'Home', root_path %>
-<h1>About Senior Safeguard</h1>
-<p>This page will include general information about online scams.</p>
-<p>There will be an option to share this information on social media</p>
+<h3>About Senior Safeguard</h3>
+<p>
+	The goals of Senior Safeguard are:
+		<li>To protect people who are unfamiliar with technology from scams</li>
+		<li>To raise awareness of online scams</li>
+</p>
+
+<h3>Frequently Asked Questions</h3>
+
+<h4>How do I report a scam?</h4>
+<p>Click on 'Report a Scam' on the menu. Use the drop down menu to select the category of the scam. Then, type a description of the scam in the text box. When you're done, click on the submit button so others can leave comments.</p>
+
+<h4>How do I view a scam report/leave a comment?</h4>
+<p>From the home page, click on 'Show' next to the scam report you wish to view. From that page, you can view the scam report, leave a comment, and read any existing comments.</p>
+
+<h4>What happens when I add someone as a friend?</h4>
+<p>Whenever you submit a new scam report, everyone on your friend list will be sent an email notification. Adding family members and friends will increase the chance that you will receive feedback on your scam report.</p>
+
+<h4>How do I add a friend?</h4>
+<p>Click on 'Friends' on the menu. This page will display existing friends, friend requests ready for you to accept/reject, and pending friend requests you have sent. On the bottom of the page is the list of all Senior Safeguard users. Click on 'Add Friend' next to the account you wish to add. You will have to wait until they approve the request for them to appear on your friends list.</p>
+
+<h4>My family member/friend doesn't have an account. How can I add them?</h4>
+<p>Before adding someone as a friend, they must create a Senior Safeguard account first. Tell your family member/friend to create an account. Then, either account can send the friend request.</p>
