--- a/code/app/views/home/index.html.erb
+++ b/code/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<!-- This file is the view for the home page of the application -->
+<!-- Display the current user's scam reports -->
 <h3>My Scam Reports</h3>
 
 <table class="blueTable">
@@ -24,6 +26,7 @@
   <% end %>
 </table>
 
+<!-- Display scam reports from the current user's friends -->
 <h3>My Friend's Scam Reports</h3>
 
 <table class="blueTable">
@@ -49,6 +52,7 @@
   <% end %>
 </table>
 
+<!-- Display all scam reports, sorted by most recent -->
 <h3>All Scam Reports</h3>
 
 <table class="blueTable">
