--- a/code/app/views/layouts/application.html.erb
+++ b/code/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <% if user_signed_in? %>
 
     <div id="divider-box"></div>
-
+        <!-- Menu -->
         <li class="menu"><%= link_to 'Home', root_path %></li>
         <li class="menu"><%= link_to 'Report a Scam', new_scam_path %></li>
         <li class="menu"><%= link_to 'Friends', users_path %></li>
