--- a/code/app/views/pages/learn.html.erb
+++ b/code/app/views/pages/learn.html.erb
@@ -1,3 +1,4 @@
+<!-- This file is the view for the 'How to Identify Online Scams' page -->
 <h3>Common Types of Scams</h3>
 <p>Here are some common examples of online scams that you should know how to identify. 
  </p>
