--- a/code/app/views/users/index.html.erb
+++ b/code/app/views/users/index.html.erb
@@ -1,3 +1,6 @@
+<!-- This file is the view for the Friends page -->
+
+<!-- Display the current user's friend list -->
 <h3 align="center">Friends</h3>
 <table class="blueTable">
 <tr><th></th><th></th></tr>
@@ -9,6 +12,7 @@
 <% end %>
 </table>
 
+<!-- Display the current user's friend requests -->
 <h3 align="center">Friend Requests</h3>
 
 <table class="blueTable">
@@ -21,6 +25,7 @@
 <% end %>
 </table>
 
+<!-- Display the current user's pending friends -->
 <h3 align="center">Pending Friends</h3>
 
 <table class="blueTable">
@@ -30,6 +35,7 @@
 <% end %>
 </table>
 
+<!-- Display a list of all users, so that the user can send a friend request -->
 <h3 align="center">Add a Friend</h3>
 <table class="blueTable">
 <tr><th></th><th></th></tr>
